Fix spacing issue with share button

--- a/public/css/base/base.css
+++ b/public/css/base/base.css
@@ -391,8 +391,9 @@ button {
 .card--thread-options .btn--share {
   display: flex;
   align-items: center;
+  justify-content: space-between;
   column-gap: 1.5rem;
-  padding: 0.25rem 0rem 0.25rem 1rem;
+  padding: 0.25rem 0.75rem 0.25rem 1rem;
   width: 100%;
   border-radius: 0.75rem;
   background: #E0E0E0;
