--- a/src/scss/base/_base_components.scss
+++ b/src/scss/base/_base_components.scss
@@ -425,8 +425,9 @@
     .btn--share {
         display: flex;
         align-items: center;
+        justify-content: space-between;
         column-gap: 1.5rem;
-        padding: .25rem 0rem .25rem 1rem;
+        padding: .25rem .75rem .25rem 1rem;
         width: 100%;
         border-radius: .75rem;
         background: #E0E0E0;
